--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,10 +13,36 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Gilroy", sans-serif;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 html,
 body {
   height: 100%;
   width: 100%;
+}
+
+/* style scrollbar */
+body::-webkit-scrollbar {
+  width: 10px;
+  background-color: #121212;
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #3d3d3d;
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: #555555;
+}
+
+img {
+  -webkit-user-drag: none;
+  user-select: none;
+  pointer-events: none; /* Optional, agar clickable nahi hai */
 }
